[package]
name = "jsparagus-ftl"
version = "0.1.0"
authors = ["Zibi Braniecki <zibi@braniecki.net>"]
edition = "2018"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "lexer"
harness = false

[[bench]]
name = "parser"
harness = false

[[bin]]
name = "lexer"
path = "src/bin/lexer.rs"

[[bin]]
name = "parser"
path = "src/bin/parser.rs"
